menambahkan list dan gambar

--- a/indexs.html
+++ b/indexs.html
@@ -6,5 +6,11 @@
     <body>
         <h3>tes remote git hub</h3>
         <p>Hello World!</p>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <img src="#" alt="#">
     </body>
 </html>
