--- a/indexs.html
+++ b/indexs.html
@@ -11,6 +11,7 @@
             <li></li>
             <li></li>
         </ul>
-        <img src="#" alt="#">
+        <video src="#"></video>
+        <frame src="" frameborder="0"></frame>
     </body>
 </html>
